# oxrsys

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
clients/Android/android-vr/app/: build.gradle.kts
clients/Android/android-vr/app/src/main/cpp/: CMakeLists.txt  XrApp.cpp  XrApp.h
clients/Apple/common/OXRSysSimulator/Sources/OXRSysSimulator/: SimulatorInputManager.swift
clients/Apple/common/OXRSysStreaming/Sources/OXRSysStreaming/: Protocol.swift
clients/Apple/common/OXRSysStreaming/Tests/OXRSysStreamingTests/: ProtocolLayoutTests.swift
clients/Apple/oxrsys-home/OXRSys Home.xcodeproj/: project.pbxproj
clients/Apple/oxrsys-simulator/OXRSys Simulator.xcodeproj/: project.pbxproj
clients/Apple/oxrsys-visionos/OXRSys visionOS/: AppModel.swift
clients/Apple/oxrsys-visionos/OXRSys visionOS.xcodeproj/: project.pbxproj
clients/Qt/cmake/: DetectQt6.cmake
clients/Qt/oxrsys-home/src/: HomeModel.cpp  HomeModel.h  MainWindow.cpp  MainWindow.h  PlatformSupport.cpp  RuntimeManager.cpp  RuntimeManager.h
clients/Qt/oxrsys-home/tests/: HomeCoreTests.cpp
clients/Qt/oxrsys-simulator-shared/: CMakeLists.txt
clients/Qt/oxrsys-simulator-shared/src/: SimulatorWidget.cpp  SimulatorWidget.h
common/protocol/include/oxrsys/protocol/: Protocol.h
config/: OXRSysVersion.xcconfig
docs/: build.md  install.md  protocol.md  simulator.md
runtime/: CMakeLists.txt
runtime/src/: EntryPoint.cpp  InputManager.cpp  InputManager.h  Instance.cpp  Session.cpp  Space.cpp  TrackingReceiver.cpp
tests/: TestInputManager.cpp  TestProtocolLayout.cpp  TestRuntimeApi.cpp  TestRuntimeStatus.cpp
